# uhd

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  AUTHORS  CHANGELOG  CLAUDE.md  CMakeLists.txt  CODING.md  CONTRIBUTING.md  INSTALL  LICENSE.md  Makefile.am  Makefile.common  README.md  README.txt  bootstrap  configure.ac  fix-copyright-years  uhd.pc.in  usrp-uhd.pc.in  usrp_uhd.pc.in
firmware/fx2/: .gitignore  AUTHORS  CMakeLists.txt  configure.ac
firmware/microblaze/: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  Makefile.common  README  bootstrap  configure.ac
firmware/not_usrp2/: CMakeLists.txt
firmware/octoclock/: .gitignore  CMakeLists.txt  Makefile  OctoClock-io.h  OctoClock.c
firmware/usrp2/: CMakeLists.txt
firmware/usrp3/: CMakeLists.txt
firmware/zpu/: AUTHORS  CMakeLists.txt
host/: .gitignore  AUTHORS  AUTHORS.txt  CMakeLists.txt  Doxyfile.in  LICENSE  README  README.md  README.txt  fix-copyright-years  uhd.pc.in
host/Modules/: FindDocutils.cmake  UHDComponent.cmake  UHDPackage.cmake  UHDPython.cmake  UHDVersion.cmake
host/apps/: CMakeLists.txt  discover_usrps.cpp  usrp1e_load_fpga.cpp  usrp2_burner.cpp  usrp2_recovery.py
host/cmake/: boost.txt  cmake_uninstall.cmake.in
host/config/: CPack.cmake  Component.cmake  Python.cmake  Version.cmake
host/docs/: 01_getting_started.dox  02_devices.dox  03_installation.dox  04_driver_usage.dox  05_driver_api.dox  06_fpga.md  07_rfnoc.dox  CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  block_desc_files.dox  build.dox  build.dox.in  build.rst  c_api.dox  calibration.dox  calibration.rst  capi.dox  coding.dox  coding.rst  compat.dox  configfiles.dox  configuration.dox  crimson_output.txt  dboards.dox  dboards.rst  devices.dox  dpdk.dox  extension.dox  fbx.dox  general.dox  general.rst  gpio_api.dox  gpio_api.rst  gpsdo.dox  gpsdo.rst  gpsdo_b2x0.dox  gpsdo_b2x0.rst  gpsdo_x3x0.dox  gpsdo_x3x0.rst  (+70 more)
host/examples/: CMakeLists.txt  ascii_art_dft.hpp  benchmark_rate.cpp  benchmark_rx_rate.cpp  benchmark_streamer.cpp  convert_benchmark.cpp  fpgpio.cpp  gpio.cpp  gpio_x300_mux.cpp  gpio_x300_mux_rfnoc.cpp  latency_test.cpp  network_relay.cpp  pps_test.cpp  replay_samples_from_file.cpp  rfnoc_nullsource_ce_rx.cpp  rfnoc_radio_loopback.cpp  rfnoc_replay_samples_from_file.cpp  rfnoc_rx_to_file.cpp  rx_ascii_art_dft.cpp  rx_multi_samples.cpp  rx_samples_c.c  rx_samples_to_file.cpp  rx_samples_to_udp.cpp  rx_timed_samples.cpp  rx_to_file.cpp  rx_to_udp.cpp  spi.cpp  sync_to_gps.cpp  test_async_messages.cpp  test_clock_synch.cpp  test_dboard_coercion.cpp  test_messages.cpp  test_pps_input.cpp  test_timed_commands.cpp  transport_hammer.cpp  twinrx_freq_hopping.cpp  tx_bursts.cpp  tx_continuous_samples.cpp  tx_from_file.cpp  tx_samples_c.c  (+7 more)
host/include/: .clang-format  CMakeLists.txt  config.h.in  uhd.h
host/lib/: CMakeLists.txt  build_info.cpp  constants.hpp.in  deprecated.cpp  device.cpp  device3.cpp  device_addr.cpp  device_python.cpp  device_python.hpp  error_c.cpp  exception.cpp  gain_group.cpp  gain_handler.cpp  image_loader.cpp  load_modules.cpp  log.cpp  metadata.cpp  property_tree.cpp  property_tree_python.cpp  property_tree_python.hpp  ranges.cpp  sched.cpp  simple_device.cpp  stream.cpp  stream_python.hpp  thread_priority.cpp  time_spec.cpp  tune_helper.cpp  types.cpp  uhd.cpp  uhd.rc.in  utils.cpp  version.cpp  version.cpp.in  version_c.cpp  version_python.hpp  wax.cpp
host/msvc/: stdint.h
host/python/: CMakeLists.txt  __init__.py  build.py  copy_python_module.cmake  filters.py  pyproject.toml.in  pyuhd.cpp  pyuhd.py  requirements.txt  rfnoc.py  setup.py.in  types.py  usrp.py
host/test/: CMakeLists.txt  addr_test.cpp  bounded_buffer_test.cpp  buffer_test.cpp  convert_test.cpp  convert_types_test.cpp  device_test.cpp  error_test.cpp  gain_group_test.cpp  gain_handler_test.cpp  module_test.cpp  ranges_test.cpp  subdev_spec_test.cpp  tune_helper_test.cpp  vrt_test.cpp  warning_test.cpp  wax_test.cpp
host/tests/: CMakeLists.txt  actions_test.cpp  addr_test.cpp  adf535x_test.cpp  admv1320_test.cpp  admv1420_test.cpp  block_id_test.cpp  blockdef_test.cpp  buffer_test.cpp  byteswap_test.cpp  cal_container_test.cpp  cal_data_dsa_test.cpp  cal_data_gain_pwr_test.cpp  cal_data_iq_dc_test.cpp  cal_data_iq_test.cpp  cal_database_test.cpp  cast_test.cpp  chdr_parse_test.cpp  chdr_test.cpp  client_zero_test.cpp  compat_test.cpp  complex_gain_3000_test.cpp  config_parser_test.cpp  constrained_device_args_test.cpp  convert_test.cpp  ctrlport_endpoint_test.cpp  custom_reg_test.cpp  device3_test.cpp  device_addr_test.py  device_addrs_c_test.c  dict_test.cpp  discoverable_feature_test.cpp  dpdk_port_test.cpp  dpdk_test.cpp  eeprom_c_test.c  eeprom_utils_test.cpp  error_c_test.cpp  error_test.cpp  expert_test.cpp  fe_conn_test.cpp  (+75 more)
host/usrp_e_utils/: CMakeLists.txt  clkgen-config.cpp  clkgen_config.hpp  common.hpp  usrp-e-debug-pins.c  usrp-e-gpio.c  usrp-e-i2c.c  usrp-e-loopback.c  usrp-e-loopback.cpp  usrp-e-timed.c  usrp-e-utility.cpp  usrp-e-wb-test.cpp
host/utils/: CMakeLists.txt  FastSendDatagramThreshold.reg  b100_eeprom.h  b2xx_fx3_utils.cpp  b2xx_side_channel.py  cdecode.c  cdecode.h  convert_cal_data.py  converter_benchmark.cpp  converter_benchmark.py  copy_python_module.cmake  discover_usrps.cpp  fpga-downloader.cpp  fx2_init_eeprom.cpp  gen_license_key.py  nirio_programmer.cpp  octoclock_burn_eeprom.cpp  octoclock_firmware_burner.cpp  query_gpsdo_sensors.cpp  rfnoc_image_builder.py  setup.py.in  (+55 more)
images/: .gitignore  CMakeLists.txt  Makefile  README  README.md  create_imgs_package.py  image_package_mapping.py  make_zip.sh  manifest.txt  package_images.py  populate_images.py  uhdimgs.py
lib/: CMakeLists.txt  Makefile.am  device.cpp  device_addr.cpp  gain_handler.cpp  shared_iovec.cpp  usrp_uhd.cpp  wax.cpp
mpm/: .gitignore  CMakeLists.txt  mpm_test_main.cpp
test/: .gitignore  CMakeLists.txt  Makefile.am  addr_test.cpp  cppunit_test.cpp  device_test.cpp  gain_handler_test.cpp  main_test.cpp  usrp_dboard_test.cpp  wax_test.cpp
(+8670 files in other folders)
